<resources>
    <string name="app_name">Math Duel</string>
    <string name="start_game">Start Game</string>
    <string name="high_score">High Score</string>
    <string name="multiplayer">Multiplayer Game</string>
    <string name="false_name">FALSE</string>
    <string name="true_name">TRUE</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="endgame">COMPLETE</string>
    <string name="nameplayer">Player Name </string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="login.error.signin">Unable to log in %s</string>
    <string name="login.error.signup">Unable to register new user %s</string>
    <string name="contactlist.menu.action.signoff">Sign off</string>
    <string name="contactlist.title">Friend list</string>
    <string name="addcontact.title">Add Friend</string>
    <string name="addcontact.add">To accept</string>
    <string name="addcontact.cancel">Cancel</string>
    <string name="addcontact.contactadded">Successfully added friend</string>
    <string name="addcontact.error">Unable to add non-existent user</string>
    <string name="log_out">Sign Off</string>
    <string name="playerConnected">Player Connected</string>
    <string name="choosePlayer">%s want to play with you</string>
    <string name="connecting">Connecting...</string>
    <string name="cant_connect">Can not connect to player</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="deleteUser">Are you sure want to delete this user? </string>
    <string name="delete">DELETE</string>
    <string name="please_signup">Please sign in to go to Multiplayer Game </string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="roundPlay">Round %d</string>
    <string name="compleRound">You had been completed %d /20 round. Try again  </string>
    <string name="yourScore">Your Score</string>
    <string name="playerScore">Player Score</string>
    <string name="win">YOU WIN</string>
    <string name="lose">YOU LOSE</string>
    <string name="timeup">Time Up. Can not connect to player right now </string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="option">OPTION</string>
    <string name="networktitle">No internet connection available</string>
    <string name="networkMessage">Please connect internet to play multiplayer game</string>
    <string name="randomPlay">Random Play </string>

    <string name="ad_unit_banner">ca-app-pub-9393627589702210/7293344286</string>
    <string name="ad_unit_full">ca-app-pub-9393627589702210/8770077482</string>
    <string name="web_client_id">829350904917-aavv35chbjt27g7jd8o5g0filaq6f7vu.apps.googleusercontent.com</string>
</resources>
